@@ -248,7 +248,6 @@ class Q_CORE_EXPORT QVariant
     QVariant(const QUrl &url);
     QVariant(const QEasingCurve &easing);
 #endif
-    QVariant(Qt::GlobalColor color);
 
     QVariant& operator=(const QVariant &other);
 #ifdef Q_COMPILER_RVALUE_REFS
