@@ -235,8 +235,6 @@ private slots:
 
     void saveLoadCustomTypes();
 
-    void globalColor();
-
     void variantMap();
     void variantHash();
 
@@ -2445,13 +2443,6 @@ void tst_QVariant::url()
     QVERIFY(qVariantCanConvert<QString>(v2));
     QCOMPARE(v2.toString(), str);
     QCOMPARE(v3.toString(), str);
-}
-
-void tst_QVariant::globalColor()
-{
-    QVariant variant(Qt::blue);
-    QVERIFY(variant.type() == QVariant::Color);
-    QVERIFY(qVariantValue<QColor>(variant) == QColor(Qt::blue));
 }
 
 void tst_QVariant::variantMap()
